--- a/xgEpl.ipynb
+++ b/xgEpl.ipynb
@@ -180,6 +180,130 @@
    "source": [
     "Connecting to the database and querying back the information with SQL"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>team1</th>\n",
+       "      <th>team2</th>\n",
+       "      <th>score1</th>\n",
+       "      <th>score2</th>\n",
+       "      <th>xg1</th>\n",
+       "      <th>xg2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-08-13</td>\n",
+       "      <td>Hull City</td>\n",
+       "      <td>Leicester City</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>2.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-08-13</td>\n",
+       "      <td>Everton</td>\n",
+       "      <td>Tottenham Hotspur</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-08-13</td>\n",
+       "      <td>Burnley</td>\n",
+       "      <td>Swansea City</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.24</td>\n",
+       "      <td>1.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-08-13</td>\n",
+       "      <td>Crystal Palace</td>\n",
+       "      <td>West Bromwich Albion</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>0.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-08-13</td>\n",
+       "      <td>Middlesbrough</td>\n",
+       "      <td>Stoke City</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>0.55</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date           team1                 team2  score1  score2   xg1  \\\n",
+       "0  2016-08-13       Hull City        Leicester City     2.0     1.0  0.85   \n",
+       "1  2016-08-13         Everton     Tottenham Hotspur     1.0     1.0  0.73   \n",
+       "2  2016-08-13         Burnley          Swansea City     0.0     1.0  1.24   \n",
+       "3  2016-08-13  Crystal Palace  West Bromwich Albion     0.0     1.0  1.11   \n",
+       "4  2016-08-13   Middlesbrough            Stoke City     1.0     1.0  1.40   \n",
+       "\n",
+       "    xg2  \n",
+       "0  2.77  \n",
+       "1  1.11  \n",
+       "2  1.84  \n",
+       "3  0.68  \n",
+       "4  0.55  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "con = sqlite3.connect(\"epl.db\")\n",
+    "df = pd.read_sql_query(\"SELECT date, team1, team2, score1, score2, xg1, xg2 FROM epl_table\", con)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
