finished games analysis will do seasons time permitting

--- a/xgEpl.ipynb
+++ b/xgEpl.ipynb
@@ -11,6 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The goal of this project is to analyze whether expected goals (xg) matches the results of an individual game or on a larger scale a season.  All result and figures are from 3 seasons of the English Premier League (EPL).\n",
+    "\n",
     "Libraries used in this project."
    ]
   },
@@ -758,7 +760,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This takes a look at the outer edges of the results. The xg map is sparse at stating a result should have been a 0-0 draw (only 7 times) while it is a somewhat common outcome in the actual score (81 times or 7% of the data set). Again the actual scores show cases of a team scoring over 5 goals 49 times while xg only thought that would happen 3 times based on the chances of the game. I don't think one can call these 2 cases of actual outcomes outliers either as the comprise 11.4% of the total data set. XG only shows this happening in its metric 0.8%."
+    "This takes a look at the outer edges of the results. The xg map is sparse at stating a result should have been a 0-0 draw (only 7 times) while it is a somewhat common outcome in the actual score (81 times or 7% of the data set). Again the actual scores show cases of a team scoring over 5 goals 49 times while xg only thought that would happen 3 times based on the chances of the game. I don't think one can call these 2 cases of actual outcomes outliers either as the comprise 11.4% of the total data set. XG only shows this happening in its metric 0.8%.\n",
+    "\n",
+    "## In Conclusion\n",
+    "From all this xg doesn't seem like a great way to match a single games' outcome considering it only matches the correct result 57% of the time.  It also doesn't pickup well on the cases at the outer edges of the scores (0-0 or 6-3) while in actuality these cases happen a decent amount of the time.\n",
+    "\n",
+    "However from the metrics we have explored so far xg does seem to closely follow the actual results on a whole over the course of all three seasons.  The averages of xg and actual scores is very close over the course of the time span.  And when plotting out the data points the scatter plots are very similar.\n",
+    "\n",
+    "At the end of this analysis I believe the xg is a metric that is beneficial to analyzing a larger span of time or seasons than it is for analyzing each individual game.  "
    ]
   }
  ],
