added more queries updated conclusion

--- a/xgEpl.ipynb
+++ b/xgEpl.ipynb
@@ -762,12 +762,103 @@
    "source": [
     "This takes a look at the outer edges of the results. The xg map is sparse at stating a result should have been a 0-0 draw (only 7 times) while it is a somewhat common outcome in the actual score (81 times or 7% of the data set). Again the actual scores show cases of a team scoring over 5 goals 49 times while xg only thought that would happen 3 times based on the chances of the game. I don't think one can call these 2 cases of actual outcomes outliers either as the comprise 11.4% of the total data set. XG only shows this happening in its metric 0.8%.\n",
     "\n",
+    "Now we will try to take a closer look at how XG matches up with a whole season's results.  This next section queries only the teams involved in the 2018-2019 season.  It then passes these teams into a for loop to determine how the actual points accured (win is worth 3 pts, tie is worth 1 pt, loss is worth 0 pts) match up with the xg pts accured.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manchester United 66 61 5\n",
+      "Newcastle 45 31 14\n",
+      "AFC Bournemouth 45 47 -2\n",
+      "Huddersfield Town 16 21 -5\n",
+      "Watford 50 46 4\n",
+      "Fulham 26 26 0\n",
+      "Wolverhampton 57 61 -4\n",
+      "Liverpool 97 92 5\n",
+      "Southampton 39 39 0\n",
+      "Arsenal 70 60 10\n",
+      "Cardiff City 34 30 4\n",
+      "Everton 54 55 -1\n",
+      "Tottenham Hotspur 71 68 3\n",
+      "West Ham United 52 41 11\n",
+      "Leicester City 52 55 -3\n",
+      "Chelsea 72 85 -13\n",
+      "Manchester City 98 99 -1\n",
+      "Burnley 40 37 3\n",
+      "Brighton and Hove Albion 36 32 4\n",
+      "Crystal Palace 49 47 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "teamsUnique = pd.read_sql_query(\"\"\"\n",
+    "    SELECT DISTINCT team1 FROM epl_table WHERE date BETWEEN '2018-08-01' AND '2019-06-01'\"\"\", con)\n",
+    "teamsList = teamsUnique.iloc[:,0].tolist()\n",
+    "def seasonComp(list):\n",
+    "    for i in list:\n",
+    "         query1 = pd.read_sql_query(\"\"\"\n",
+    "            SELECT \n",
+    "                count(CASE WHEN score1 == score2 \n",
+    "                    then 1 END) as Tie,\n",
+    "                count(CASE WHEN score1 > score2\n",
+    "                    then 1 END)*3 as Win\n",
+    "                FROM epl_table WHERE team1='{}' and date BETWEEN '2018-08-01' AND '2019-06-01'\n",
+    "                \"\"\".format(i), con)\n",
+    "         query2 = pd.read_sql_query(\"\"\"\n",
+    "            SELECT \n",
+    "                count(CASE WHEN score1 == score2 \n",
+    "                    then 1 END) as Tie,\n",
+    "                count(CASE WHEN score1 < score2\n",
+    "                    then 1 END)*3 as Win\n",
+    "                FROM epl_table WHERE team2='{}' and date BETWEEN '2018-08-01' AND '2019-06-01'\n",
+    "                \"\"\".format(i), con)\n",
+    "         queryxg1 = pd.read_sql_query(\"\"\"\n",
+    "            SELECT \n",
+    "                count(CASE WHEN abs(xg1 - xg2) <= .5 \n",
+    "                    then 1 END) as Tie, \n",
+    "                count(CASE WHEN xg1 > (xg2 + .5) \n",
+    "                    then 1 END)*3 as Win \n",
+    "                FROM epl_table WHERE team1='{}' and date BETWEEN '2018-08-01' AND '2019-06-01'\n",
+    "                \"\"\".format(i), con)\n",
+    "         queryxg2 = pd.read_sql_query(\"\"\"\n",
+    "            SELECT \n",
+    "                count(CASE WHEN abs(xg1 - xg2) <= .5\n",
+    "                    then 1 END) as Tie,\n",
+    "                count(CASE WHEN (xg1 + .5) < xg2\n",
+    "                    then 1 END)*3 as Win\n",
+    "                FROM epl_table WHERE team2='{}' and date BETWEEN '2018-08-01' AND '2019-06-01'\n",
+    "                \"\"\".format(i), con)\n",
+    "         print(i, (sum(query1.loc[0].values) + sum(query2.loc[0].values)), (sum(queryxg1.loc[0].values) + sum(queryxg2.loc[0].values)), (sum(query1.loc[0].values) + sum(query2.loc[0].values)) - (sum(queryxg1.loc[0].values) + sum(queryxg2.loc[0].values)))\n",
+    "\n",
+    "seasonComp(teamsList)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems that XG is hit and miss on matching the final point total.  2 of the results are right on and 14 of the results are within +/- 5 pts of the final tally.  The other 4 results are well off the mark with a difference of 14, 10, 11, and -13 respectively.\n",
+    "\n",
+    "When we organize the data by the actual final points accumulated we see that the final table matches up well. Chelsea's xg predicted 13 more points for them but they would still have been 3rd place.  Newcastle has the largest move as the overshot their xg results by 14 finishing tied for 13th when XG had them as finishing 17th."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## In Conclusion\n",
     "From all this xg doesn't seem like a great way to match a single games' outcome considering it only matches the correct result 57% of the time.  It also doesn't pickup well on the cases at the outer edges of the scores (0-0 or 6-3) while in actuality these cases happen a decent amount of the time.\n",
     "\n",
-    "However from the metrics we have explored so far xg does seem to closely follow the actual results on a whole over the course of all three seasons.  The averages of xg and actual scores is very close over the course of the time span.  And when plotting out the data points the scatter plots are very similar.\n",
+    "However from the metrics we have explored so far xg does seem to closely follow the actual results on a whole over the course of a season.  The averages of xg and actual scores is very close over the course of the time span.  And when plotting out the data points the scatter plots are very similar.  Over the course of a season XG matches the results of the final table pretty well even if the points totals are off here and there.\n",
     "\n",
-    "At the end of this analysis I believe the xg is a metric that is beneficial to analyzing a larger span of time or seasons than it is for analyzing each individual game.  "
+    "At the end of this analysis I believe the xg is a metric that is beneficial to analyzing a larger span of time or seasons than it is for analyzing each individual game. "
    ]
   }
  ],
