added to README, added gitignore, finalized last dataframe

--- a/xgEpl.ipynb
+++ b/xgEpl.ipynb
@@ -767,40 +767,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Manchester United 66 61 5\n",
-      "Newcastle 45 31 14\n",
-      "AFC Bournemouth 45 47 -2\n",
-      "Huddersfield Town 16 21 -5\n",
-      "Watford 50 46 4\n",
-      "Fulham 26 26 0\n",
-      "Wolverhampton 57 61 -4\n",
-      "Liverpool 97 92 5\n",
-      "Southampton 39 39 0\n",
-      "Arsenal 70 60 10\n",
-      "Cardiff City 34 30 4\n",
-      "Everton 54 55 -1\n",
-      "Tottenham Hotspur 71 68 3\n",
-      "West Ham United 52 41 11\n",
-      "Leicester City 52 55 -3\n",
-      "Chelsea 72 85 -13\n",
-      "Manchester City 98 99 -1\n",
-      "Burnley 40 37 3\n",
-      "Brighton and Hove Albion 36 32 4\n",
-      "Crystal Palace 49 47 2\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "      <th>ActualPts</th>\n",
+       "      <th>XGPts</th>\n",
+       "      <th>Difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>98</td>\n",
+       "      <td>99</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>97</td>\n",
+       "      <td>92</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Chelsea</td>\n",
+       "      <td>72</td>\n",
+       "      <td>85</td>\n",
+       "      <td>-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Tottenham Hotspur</td>\n",
+       "      <td>71</td>\n",
+       "      <td>68</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>70</td>\n",
+       "      <td>60</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Manchester United</td>\n",
+       "      <td>66</td>\n",
+       "      <td>61</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Wolverhampton</td>\n",
+       "      <td>57</td>\n",
+       "      <td>61</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Everton</td>\n",
+       "      <td>54</td>\n",
+       "      <td>55</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Leicester City</td>\n",
+       "      <td>52</td>\n",
+       "      <td>55</td>\n",
+       "      <td>-3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>West Ham United</td>\n",
+       "      <td>52</td>\n",
+       "      <td>41</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Watford</td>\n",
+       "      <td>50</td>\n",
+       "      <td>46</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Crystal Palace</td>\n",
+       "      <td>49</td>\n",
+       "      <td>47</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Newcastle</td>\n",
+       "      <td>45</td>\n",
+       "      <td>31</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AFC Bournemouth</td>\n",
+       "      <td>45</td>\n",
+       "      <td>47</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Burnley</td>\n",
+       "      <td>40</td>\n",
+       "      <td>37</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Brighton and Hove Albion</td>\n",
+       "      <td>36</td>\n",
+       "      <td>32</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Cardiff City</td>\n",
+       "      <td>34</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Fulham</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Huddersfield Town</td>\n",
+       "      <td>16</td>\n",
+       "      <td>21</td>\n",
+       "      <td>-5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Team  ActualPts  XGPts  Difference\n",
+       "16           Manchester City         98     99          -1\n",
+       "7                  Liverpool         97     92           5\n",
+       "15                   Chelsea         72     85         -13\n",
+       "12         Tottenham Hotspur         71     68           3\n",
+       "9                    Arsenal         70     60          10\n",
+       "0          Manchester United         66     61           5\n",
+       "6              Wolverhampton         57     61          -4\n",
+       "11                   Everton         54     55          -1\n",
+       "14            Leicester City         52     55          -3\n",
+       "13           West Ham United         52     41          11\n",
+       "4                    Watford         50     46           4\n",
+       "19            Crystal Palace         49     47           2\n",
+       "1                  Newcastle         45     31          14\n",
+       "2            AFC Bournemouth         45     47          -2\n",
+       "17                   Burnley         40     37           3\n",
+       "8                Southampton         39     39           0\n",
+       "18  Brighton and Hove Albion         36     32           4\n",
+       "10              Cardiff City         34     30           4\n",
+       "5                     Fulham         26     26           0\n",
+       "3          Huddersfield Town         16     21          -5"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "teamsUnique = pd.read_sql_query(\"\"\"\n",
     "    SELECT DISTINCT team1 FROM epl_table WHERE date BETWEEN '2018-08-01' AND '2019-06-01'\"\"\", con)\n",
     "teamsList = teamsUnique.iloc[:,0].tolist()\n",
+    "\n",
+    "totals_list = []\n",
     "def seasonComp(list):\n",
     "    for i in list:\n",
     "         query1 = pd.read_sql_query(\"\"\"\n",
@@ -835,9 +1011,12 @@
     "                    then 1 END)*3 as Win\n",
     "                FROM epl_table WHERE team2='{}' and date BETWEEN '2018-08-01' AND '2019-06-01'\n",
     "                \"\"\".format(i), con)\n",
-    "         print(i, (sum(query1.loc[0].values) + sum(query2.loc[0].values)), (sum(queryxg1.loc[0].values) + sum(queryxg2.loc[0].values)), (sum(query1.loc[0].values) + sum(query2.loc[0].values)) - (sum(queryxg1.loc[0].values) + sum(queryxg2.loc[0].values)))\n",
+    "         \n",
+    "         totals_list.append([i, (sum(query1.loc[0].values) + sum(query2.loc[0].values)), (sum(queryxg1.loc[0].values) + sum(queryxg2.loc[0].values)), (sum(query1.loc[0].values) + sum(query2.loc[0].values)) - (sum(queryxg1.loc[0].values) + sum(queryxg2.loc[0].values))])\n",
     "\n",
-    "seasonComp(teamsList)"
+    "seasonComp(teamsList)\n",
+    "new_df = pd.DataFrame(totals_list, columns=['Team', 'ActualPts', 'XGPts', 'Difference'])\n",
+    "new_df.sort_values(by=['ActualPts'], ascending=False)\n"
    ]
   },
   {
@@ -856,7 +1035,7 @@
     "## In Conclusion\n",
     "From all this xg doesn't seem like a great way to match a single games' outcome considering it only matches the correct result 57% of the time.  It also doesn't pickup well on the cases at the outer edges of the scores (0-0 or 6-3) while in actuality these cases happen a decent amount of the time.\n",
     "\n",
-    "However from the metrics we have explored so far xg does seem to closely follow the actual results on a whole over the course of a season.  The averages of xg and actual scores is very close over the course of the time span.  And when plotting out the data points the scatter plots are very similar.  Over the course of a season XG matches the results of the final table pretty well even if the points totals are off here and there.\n",
+    "However from the metrics we have explored so far xg does seem to decently follow the actual results on a whole over the course of a season.  The averages of xg and actual scores is very close over the course of the time span.  And when plotting out the data points the scatter plots are very similar.  Over the course of a season XG matches the results of the final table pretty well even if the points totals are off here and there.\n",
     "\n",
     "At the end of this analysis I believe the xg is a metric that is beneficial to analyzing a larger span of time or seasons than it is for analyzing each individual game. "
    ]
